--- a/style.css
+++ b/style.css
@@ -1,32 +1,16 @@
-* {
-    border: 1px solid black;
+html {
+    height: 100%;
 }
 
 body {
-    /* padding: 10px; */
-    line-height: 1.5;
-}
+    background-image: linear-gradient(to bottom,
+            rgb(201, 168, 226),
+            rgba(0, 0, 255, 0.731)), url("assets/meandkitty.jpeg");
+    background-repeat: no-repeat;
+    background-blend-mode:screen;
+   background-position-x: 10%;
+   background-position-y: 20%;
 
-header {
-    /* display: inline-flex; */
-    
-}
 
-h1 {
-    /* padding: 10px; */
-    display: inline-flex;
-    
-}
 
-nav {
-margin: 50px 80px 0;
- display: inline-flex;
- float:right;
-}
-
-nav ul {
-    display: inline-flex;
-    padding: 0;
-    list-style-type:none;
-    margin: 0;
-}
+   
