--- a/style.css
+++ b/style.css
@@ -2,15 +2,66 @@ html {
     height: 100%;
 }
 
+* {
+    /* border: 1px dashed palevioletred; */
+}
+
 body {
+    height: 100%;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
     background-image: linear-gradient(to bottom,
             rgb(201, 168, 226),
             rgba(0, 0, 255, 0.731)), url("assets/meandkitty.jpeg");
     background-repeat: no-repeat;
-    background-blend-mode:screen;
-   background-position-x: 10%;
-   background-position-y: 20%;
+    background-blend-mode: screen;
+    background-position-x: 10%;
+    background-position-y: 30%;
+}
+
+header {
+    padding: 20px;
+    font-family: Arial, sans-serif;
+    color: #770f53;
+    width: 100%;
+    position: fixed;
+    font-weight: normal;
+
+}
+
+h1 {
+    top: 5px;
+    display: inline;
+    font-size: 3em;
+    background: -webkit-linear-gradient(#770f53, rgba(73, 54, 54, 0.594),
+     rgba(0, 0, 255, 0.731));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    position: relative;
+}
+
+nav {
+    margin-right: 50px;
+    float: right;
+    font-size: 25px;
+    text-decoration: none;
+    list-style-type: none;
+    position: relative;
+
+}
+
+ul li {
+    display: inline-block;
+    margin-left: 90px;
+    background: -webkit-linear-gradient(#770f53, rgba(73, 54, 54, 0.594),
+     rgba(0, 0, 255, 0.731));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 
 
-
-   
+}
