--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ body {
             rgb(201, 168, 226),
             rgba(0, 0, 255, 0.731)), url("assets/meandkitty.jpeg");
     background-repeat: no-repeat;
-    background-blend-mode: screen;
-    background-position-x: 10%;
-    background-position-y: 30%;
+    /* background-blend-mode: screen; */
+    background-position-x: 3%;
+    background-position-y: 40%;
 }
 
 header {
@@ -32,32 +32,34 @@ header {
 
 h1 {
     top: 5px;
-    display: inline;
-    font-size: 3em;
+    display: inline-flex;
+    font-size: 70px;
     background: -webkit-linear-gradient(#770f53, rgba(73, 54, 54, 0.594),
      rgba(0, 0, 255, 0.731));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
+    margin-block-start: 0;
+    margin-block-end: 0;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     position: relative;
+    padding: 20px;
 }
 
 nav {
-    margin-right: 50px;
+    margin-right: 80px;
     float: right;
-    font-size: 25px;
+    font-size: 30px;
     text-decoration: none;
     list-style-type: none;
     position: relative;
+    padding-top: 20px;
 
 }
 
 ul li {
-    display: inline-block;
-    margin-left: 90px;
+    display: inline-flex;
+    margin-left: 100px;
     background: -webkit-linear-gradient(#770f53, rgba(73, 54, 54, 0.594),
      rgba(0, 0, 255, 0.731));
     -webkit-background-clip: text;
